; ModuleID = '/home/carl/AnghaBench/linux/drivers/remoteproc/extr_qcom_wcnss.c_wcnss_fatal_interrupt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/remoteproc/extr_qcom_wcnss.c_wcnss_fatal_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qcom_wcnss = type { i32, i32 }

@QCOM_SMEM_HOST_ANY = common dso_local global i32 0, align 4
@WCNSS_CRASH_REASON_SMEM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"fatal error received: %s\0A\00", align 1
@RPROC_FATAL_ERROR = common dso_local global i32 0, align 4
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @wcnss_fatal_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wcnss_fatal_interrupt(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.qcom_wcnss*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.qcom_wcnss*
  store %struct.qcom_wcnss* %9, %struct.qcom_wcnss** %5, align 8
  %10 = load i32, i32* @QCOM_SMEM_HOST_ANY, align 4
  %11 = load i32, i32* @WCNSS_CRASH_REASON_SMEM, align 4
  %12 = call i8* @qcom_smem_get(i32 %10, i32 %11, i64* %6)
  store i8* %12, i8** %7, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = call i32 @IS_ERR(i8* %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %31, label %16

16:                                               ; preds = %2
  %17 = load i64, i64* %6, align 8
  %18 = icmp ugt i64 %17, 0
  br i1 %18, label %19, label %31

19:                                               ; preds = %16
  %20 = load i8*, i8** %7, align 8
  %21 = getelementptr inbounds i8, i8* %20, i64 0
  %22 = load i8, i8* %21, align 1
  %23 = sext i8 %22 to i32
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %31

25:                                               ; preds = %19
  %26 = load %struct.qcom_wcnss*, %struct.qcom_wcnss** %5, align 8
  %27 = getelementptr inbounds %struct.qcom_wcnss, %struct.qcom_wcnss* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = load i8*, i8** %7, align 8
  %30 = call i32 @dev_err(i32 %28, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8* %29)
  br label %31

31:                                               ; preds = %25, %19, %16, %2
  %32 = load %struct.qcom_wcnss*, %struct.qcom_wcnss** %5, align 8
  %33 = getelementptr inbounds %struct.qcom_wcnss, %struct.qcom_wcnss* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = load i32, i32* @RPROC_FATAL_ERROR, align 4
  %36 = call i32 @rproc_report_crash(i32 %34, i32 %35)
  %37 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %37
}

declare dso_local i8* @qcom_smem_get(i32, i32, i64*) #1

declare dso_local i32 @IS_ERR(i8*) #1

declare dso_local i32 @dev_err(i32, i8*, i8*) #1

declare dso_local i32 @rproc_report_crash(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
